syntax = "proto3";

package nss;

import "google/protobuf/timestamp.proto";

option java_package = "com.bachelors.nss.protobuf";
option java_outer_classname = "NewsArticleProto";

message Article {

  string source_name = 1;
  string author = 2;
  string title = 3;
  string description = 4;
  string url = 5;
  string image_url = 6;
  google.protobuf.Timestamp date_publish = 7;
  string content = 8;

}